\theta\left(-1\right)

--- a/paper.tex
+++ b/paper.tex
@@ -479,7 +479,7 @@ Combining the results of the previous sections with \Cref{prop:reduction-of-gaus
 \end{proof}
 \begin{remark}
 	Suppose that $\pi$ is any irreducible representation of $G$ such that $\trace \pi$ appears with non-zero coefficient in $R_{T,\theta}$. Then the central character of $\pi$ satisfies
-	$$ \centralCharacter{\pi}\left(-1\right) = \prod_{j=1}^r \alpha_j\left(-1\right) \cdot \prod_{i=1}^s \theta_i\left(-1\right).$$
+	$$ \centralCharacter{\pi}\left(-1\right) = \theta\left(-1\right) = \prod_{j=1}^r \alpha_j\left(-1\right) \cdot \prod_{i=1}^s \theta_i\left(-1\right).$$
 	Thus \begin{align*}
 		\dblVirtualGaussSumScalar{R_{T, \theta}}{\chi} =& R_{T,\theta}\left(1\right) \GaussSumScalar{\chi^2}{\fieldCharacter}^{\left\lfloor\frac{\dim \hermitianSpace}{2}\right\rfloor} \centralCharacter{\pi}\left(-1\right) g_T\left(\theta, \fieldCharacter\right) \\
 		& \left[\times \epsilon\left(-1\right) \chi\left(-2\right)\right].
