--- a/paper.tex
+++ b/paper.tex
@@ -374,7 +374,7 @@ Using this notation and using the multiplicativity property of Kondo's Gauss sum
 \end{theorem}
 
 
-\subsection{Computation of character sums attached Deligne--Lusztig data}
+\subsection{Computation of character sums attached to Deligne--Lusztig data}
 
 The goal of the next two sections is to compute $\dblGaussSumScalar{\pi}{\chi}$ for $\pi$ that appears in a Deligne--Lusztig virtual character $R_{T,\theta}$ for a suitable maximal torus $T$ and $\theta \colon T \to \multiplicativegroup{\cComplex}$.
 
@@ -526,7 +526,11 @@ where for $\xi \in \multiplicativegroup{\finiteFieldExtension{k}}$, $\characteri
 The isomorphism $e_T$ induces an isomorphism for the character group $$e_{\widehat{T}} \colon \widehat{T} \to \prod_{j=1}^r \charactergroup{k_j} \times \prod_{i=1}^s \widehat{\finiteFieldExtension{2m_i}^1},$$
 given by
 $$e_{\widehat{T}}\left(\theta\right) = \theta \circ e_T^{-1}.$$
-Using the isomorphisms $\ToriDualToriIsomorphism_{k_j} \colon \charactergroup{k_j} \to \multiplicativegroup{\finiteFieldExtension{k_j}}$ and $\ToriDualToriIsomorphism_{2m_i} \colon \widehat{\finiteFieldExtension{2m_i}^1} \to \finiteFieldExtension{2m_i}^1$ and using $e_T$ and $r_{\widehat{T}}$, we obtain an isomorphism $\ToriDualToriIsomorphism_{T} \colon \widehat{T} \to T$. Note that this construction depends on the family $\left(\ToriDualToriIsomorphism_k\right)_{k=1}^{\infty}$ and on the isomorphism $e_T$.
+Using the isomorphisms $\ToriDualToriIsomorphism_{k_j} \colon \charactergroup{k_j} \to \multiplicativegroup{\finiteFieldExtension{k_j}}$ and $\ToriDualToriIsomorphism_{2m_i} \colon \widehat{\finiteFieldExtension{2m_i}^1} \to \finiteFieldExtension{2m_i}^1$ and using $e_T$ and $e_{\widehat{T}}$, we obtain an isomorphism $\ToriDualToriIsomorphism_{T} \colon \widehat{T} \to T$. Note that this construction depends on the family $\left(\ToriDualToriIsomorphism_k\right)_{k=1}^{\infty}$ and on the isomorphism $e_T$.
+
+%I just sent you an email about a similar idea which I think makes the writeup a little easier and you don't need the isomorphism between T and Tdual. I have to prepare for a seminar talk tomoro but later this week or early next we can talk
+
+%% Okay cool! good luck with your talk
 
 \subsubsection{Gauss sums attached to semisimple elements}
 
@@ -534,8 +538,8 @@ Let $T$ be as in the previous section. Let $t \in T$ and suppose that $\ToriDual
 We define $$g_T\left(t, \fieldCharacter\right) = g_T\left(\theta, \fieldCharacter\right) = \prod_{i=1}^s \GaussSumCharacter{\theta'_i}{\chi^{-1}}{\fieldCharacter_{2m_i}} \cdot  \prod_{j=1}^r \GaussSumCharacter{\alpha_j}{\chi^{-1}}{\fieldCharacter_{k_j}} \GaussSumCharacter{\alpha_j^{-1}}{\chi^{-1}}{\fieldCharacter_{k_j}}.$$
 We claim that this definition only depends on $t$ and not on the maximal torus $T$ containing it.
 
-To see this, suppose that $\deg \alpha_1 = d_1$, $\dots$, $\deg \alpha_k = d_k$, $\deg \theta'_1 = d'_1$, $\dots$, $\deg \theta'_s = d'_s$ and that $k_1 = b_1 d_1$, $\dots$, $k_r = b_r d_r$, $2m_1 = b'_1 d'_1$, $\dots$, $2m_s = b'_s d'_s$. Then for every $j$
-$\alpha_j = \beta_j \circ \FieldNorm{b_j d_j}{d_j}$ for some $\beta_j \colon \multiplicativegroup{\finiteFieldExtension{d_j}} \to \multiplicativegroup{\cComplex}$, and similarly for every $i$ $\theta'_i = \vartheta_i \circ \FieldNorm{b'_i d'_i}{d'_i}$ for some $\vartheta_i \colon \multiplicativegroup{\finiteFieldExtension{d'_i}} \to \multiplicativegroup{\cComplex}$. By the Hasse--Davenport relation we have \begin{equation}\label{eq:hasse-davenport-for-semisimple-elements}
+To see this, suppose that $\deg \alpha_1 = d_1$, $\dots$, $\deg \alpha_k = d_k$, $\deg \theta'_1 = d'_1$, $\dots$, $\deg \theta'_s = d'_s$ and that $k_1 = b_1 d_1$, $\dots$, $k_r = b_r d_r$, $2m_1 = b'_1 d'_1$, $\dots$, $2m_s = b'_s d'_s$. Then for every $j$,
+$\alpha_j = \beta_j \circ \FieldNorm{b_j d_j}{d_j}$ for some $\beta_j \colon \multiplicativegroup{\finiteFieldExtension{d_j}} \to \multiplicativegroup{\cComplex}$, and similarly for every $i$, $\theta'_i = \vartheta_i \circ \FieldNorm{b'_i d'_i}{d'_i}$ for some $\vartheta_i \colon \multiplicativegroup{\finiteFieldExtension{d'_i}} \to \multiplicativegroup{\cComplex}$. By the Hasse--Davenport relation we have \begin{equation}\label{eq:hasse-davenport-for-semisimple-elements}
 	g_T\left(t, \fieldCharacter\right) = \prod_{i=1}^s \GaussSumCharacter{\vartheta_i}{\chi^{-1}}{\fieldCharacter_{d'_i}}^{b'_i} \cdot  \prod_{j=1}^r \GaussSumCharacter{\beta_j}{\chi^{-1}}{\fieldCharacter_{d_j}}^{b_j} \GaussSumCharacter{\beta_j^{-1}}{\chi^{-1}}{\fieldCharacter_{d_j}}^{b_j}.
 \end{equation}
 On the other hand, let $$e_T\left(t\right) = \left(t_1,\dots,t_r,u_1,\dots,u_s\right),$$
@@ -545,7 +549,7 @@ where $t_j \in \multiplicativegroup{\finiteFieldExtension{k_j}}$ and $u_i \in \f
 \end{equation}
 The equalities \eqref{eq:hasse-davenport-for-semisimple-elements} and \eqref{eq:characteristic-polynomial-equality-for-semisimple-elements} imply that may define $g_T\left(t,\fieldCharacter\right)$ using the $\finiteField$-characteristic polynomial of $t$ (viewed as an element of $\GL\left(\hermitianSpace\right)$) by defining a fully multiplicative function $\tau_{\chi, \fieldCharacter} \colon \finiteField\left[X\right]_{\mathrm{monic}} \to \cComplex$, sending $1$ to $1$ and any monic irreducible polynomial $p\left(X\right)$ of degree $d \ge 1$ to $\GaussSumCharacter{\ToriDualToriIsomorphism_{d}^{-1}\left(\xi\right)}{\chi}{\fieldCharacter_d}$, where $\xi \in \multiplicativegroup{\finiteFieldExtension{d}}$ is any root of the polynomial $P\left(X\right)$. This map is well defined because Gauss sums are constant on Frobenius orbits of characters.
 
-If $s \in \GL_n\left(\finiteField\right)$ is semisimple, we denote $$\tau_{\chi, \GL_n\left(\finiteField\right)}\left(s\right) = \tau_{\chi, \fieldCharacter}\left(\characteristicPolynomial_s\left(X\right)\right),$$
+If $s \in \GL_n\left(\finiteField\right)$ is semisimple, we denote $$\tau_{\GL_n\left(\finiteField\right), \chi, \fieldCharacter}\left(s\right) = \tau_{\chi, \fieldCharacter}\left(\characteristicPolynomial_s\left(X\right)\right),$$
 
 Since the $\finiteField$-characteristic polynomial of $t$ does not depend on the maximal torus $T$ containing $t$, we conclude that the map $t \mapsto g_T\left(t, \fieldCharacter\right)$ does not depend on $t$ and we denote for any semisimple element $s \in G$, $$\tau_{G, \chi, \fieldCharacter}\left(s, \fieldCharacter\right) = g_T\left(s, \fieldCharacter\right) = \tau_{\chi, \fieldCharacter}\left(\characteristicPolynomial_{s}\left(X\right)\right),$$
 where $T$ is any maximal torus containing $s$ and $\characteristicPolynomial_{s}$ is the $\finiteField$-characteristic polynomial of $s$, viewed as an element of $\GL\left(\hermitianSpace\right)$.
@@ -570,20 +574,16 @@ where $T$ is any maximal torus containing $s$ and $\characteristicPolynomial_{s}
 \calvin{Might exist in literature somewhere otherwise is a little bit of a pain. It should be analogous to the fact that the Guass sum on a field of size $p^d$ is of magnitude $\sqrt{p^d}$.}
 Combining this with Grothendieck-Lefschetz we get
 \begin{corollary}
-    $g_T(\theta,\psi)^k = g_T(\theta \circ Nm_{k:1},\psi)$.
+	$g_T(\theta,\psi)^k = g_T(\theta \circ Nm_{k:1},tr_{k:1} \circ \psi)$.
 \end{corollary}
 \calvin{there might be a simple non-geometric way to do this corollary not sure.}
 \calvin{The corollary plus the definition of geometric conjugacy imply $g_T(\theta,\psi) = \mu_kg_{T'}(\theta',\psi)$ for some $k$-th root of unity $\mu_k$. Not sure how to finish from here.}
-
-TODO: Define $g_{\GL}\left(s, \fieldCharacter\right)$ for $\GL_n$.
-\calvin{this is a good idea but I'm not sure it'll work. I guess you can cancel some stuff out to get the Guass sum over the norm one elements via adding some characters from composing with Nm. Similarly you need to cancel stuff on the other side.}
-Fix an isomorphism $T^{\ast} \cong T$, where $T$ is the dual torus of $T$. If the image of $\theta$ is $s$ under the above isomorphism, define $g\left(s, \fieldCharacter\right) = g_T\left(\theta, \fieldCharacter\right)$. The Hasse--Davenport relation shows that this does not depend on the torus $T$.
 
 The \emph{Lusztig series} $\LusztigSeries{G}{s}$ consists of the irreducible representations $\pi$ of $R_{T, \theta}$ with $c_{\pi} \ne 0$ as in the theorem.
 
 Let $L \subset G$ be a Levi subgroup of $G$, and suppose that $L \cong \prod_{j=1}^\ell \GL_{t_j}\left(\finiteField\right) \times G'$ where $G' = \IsometryGroup\left(\hermitianSpace'\right)$ where $\hermitianSpace'$ is a non-degenerate hermitian subspace and $\hermitianSpace = \xIsotropic \oplus \hermitianSpace' \oplus \yIsotropic$, where $\xIsotropic$ and $\yIsotropic$ are totally isotropic subspace in duality. Suppose that $s \in T$ is such that $s \in L$, and denote by $s_i$ the projection of $s$ to $\GL_{t_i}\left(\finiteField\right)$ for $1 \le i \le \ell$ and by $s_0$ the projection of $s$ to $G'$. We denote
 $$\LusztigSeries{L}{s} = \left(\bigotimes_{j=1}^{\ell} \LusztigSeries{\GL_{t_j}\left(\finiteField\right)}{s_j}\right) \otimes \LusztigSeries{G'}{s_0}.$$
-It is clear that $$g\left(s, \fieldCharacter\right) = g\left(s_0,\fieldCharacter\right) \cdot \prod_{j=1}^r g_{\GL}\left(s_j, \fieldCharacter\right).$$
+It is clear that $$\tau_{G, \chi, \fieldCharacter}\left(s\right) = \tau_{G', \chi, \fieldCharacter}\left(s_0\right) \cdot \prod_{j=1}^r \tau_{\GL_{t_j}\left(\finiteField\right), \chi, \fieldCharacter}\left(s_j\right) \tau_{\GL_{t_j}\left(\finiteField\right), \chi, \fieldCharacter}\left(s_j^{-1}\right).$$
 
 We will need the following two facts:
 \begin{enumerate}
@@ -592,22 +592,22 @@ We will need the following two facts:
 \end{enumerate}
 Our theorem is equivalent to the following statement.
 \begin{proposition}
-	Keep the notations as above. Suppose that $P$ is a parabolic subgroup of $G$ with Levi part $L$. Then for any irreducible cuspidal $\sigma \in \LusztigSeries{L}{s}$ and for any irreducible subrepresentation $\pi \subset \Ind{P}{G}{\sigma}$, $$\dblGammaFactorSpace{\hermitianSpace}{\pi}{\chi}{\fieldCharacter} = g\left(s, \fieldCharacter\right).$$
+	Keep the notations as above. Suppose that $P$ is a parabolic subgroup of $G$ with Levi part $L$. Then for any irreducible cuspidal $\sigma \in \LusztigSeries{L}{s}$ and for any irreducible subrepresentation $\pi \subset \Ind{P}{G}{\sigma}$, $$\dblGammaFactorSpace{\hermitianSpace}{\pi}{\chi}{\fieldCharacter} = \tau_{G, \chi, \fieldCharacter}\left(s\right).$$
 \end{proposition}
 \begin{proof}
 	The proof is by induction on $\dim \hermitianSpace$.
 	
-	Suppose first that $L \ne G$. Then by using the multiplicativity property repeatedly (\Cref{thm:multiplicativity-in-terms-of-gamma-factors}), we have $$\dblGammaFactorSpace{\hermitianSpace}{\pi}{\chi}{\fieldCharacter} = \dblGammaFactorSpace{\hermitianSpace'}{\pi'}{\chi}{\fieldCharacter} \cdot \prod_{j=1}^r g_{\GL}\left(s_j, \fieldCharacter\right),$$
-	where $\pi'$ is an irreducible cuspidal representation of $G'$ that lies in the Lusztig series $\LusztigSeries{\pi'}{s_0}$. By the induction hypothesis, we have $$\dblGammaFactorSpace{\hermitianSpace'}{\pi'}{\chi}{\fieldCharacter} = g\left(s_0, \fieldCharacter\right),$$
+	Suppose first that $L \ne G$. Then by using the multiplicativity property repeatedly (\Cref{thm:multiplicativity-in-terms-of-gamma-factors}), we have $$\dblGammaFactorSpace{\hermitianSpace}{\pi}{\chi}{\fieldCharacter} = \dblGammaFactorSpace{\hermitianSpace'}{\pi'}{\chi}{\fieldCharacter} \cdot \prod_{j=1}^r \tau_{\GL_{t_j}\left(\finiteField\right), \chi, \fieldCharacter}\left(s_j\right) \tau_{\GL_{t_j}\left(\finiteField\right), \chi, \fieldCharacter}\left(s_j^{-1}\right),$$
+	where $\pi'$ is an irreducible cuspidal representation of $G'$ that lies in the Lusztig series $\LusztigSeries{\pi'}{s_0}$. By the induction hypothesis, we have $$\dblGammaFactorSpace{\hermitianSpace'}{\pi'}{\chi}{\fieldCharacter} = \tau_{G', \chi, \fieldCharacter}\left(s_0\right),$$
 	which implies the result.
 	
 	Next, suppose that $L = G$ and that $\pi = \sigma$ is an irreducible cuspidal representation. Let us write $$R_{T, \theta} = \sum_{\Pi} c_\Pi \trace \Pi,$$
-	where $\Pi$ goes over all the irreducible representations of $G$ and $c_{\Pi} \in \zIntegers$. For every $\Pi$ with $c_{\Pi} \ne 0$ and $\Pi \ne \pi$, we have that $\Pi$ lies in a Harish--Chandra series with $L \ne G$ as above, and therefore $$\dblVirtualGaussSumScalar{\trace \Pi}{\chi} = \dim \Pi \cdot \centralCharacter{\Pi}\left(-1\right) \cdot \GaussSumScalar{\chi^2}{\fieldCharacter}^{\left\lfloor\frac{\dim \hermitianSpace}{2}\right\rfloor} \cdot g\left(s, \fieldCharacter\right).$$
-	By \Cref{thm:computation-of-doubling-gauss-sum-scalar-for-deligne-lusztig-characters}, we have $$\dblVirtualGaussSumScalar{R_{T,\theta}}{\fieldCharacter} = R_{T,\theta}\left(1\right) \cdot \theta\left(-1\right) \cdot \GaussSumScalar{\chi^2}{\fieldCharacter}^{\left\lfloor\frac{\dim \hermitianSpace}{2}\right\rfloor} \cdot g\left(s, \fieldCharacter\right).$$
+	where $\Pi$ goes over all the irreducible representations of $G$ and $c_{\Pi} \in \zIntegers$. For every $\Pi$ with $c_{\Pi} \ne 0$ and $\Pi \ne \pi$, we have that $\Pi$ lies in a Harish--Chandra series with $L \ne G$ as above, and therefore $$\dblVirtualGaussSumScalar{\trace \Pi}{\chi} = \dim \Pi \cdot \centralCharacter{\Pi}\left(-1\right) \cdot \GaussSumScalar{\chi^2}{\fieldCharacter}^{\left\lfloor\frac{\dim \hermitianSpace}{2}\right\rfloor} \cdot \tau_{G, \chi, \fieldCharacter}\left(s\right).$$
+	By \Cref{thm:computation-of-doubling-gauss-sum-scalar-for-deligne-lusztig-characters}, we have $$\dblVirtualGaussSumScalar{R_{T,\theta}}{\fieldCharacter} = R_{T,\theta}\left(1\right) \cdot \theta\left(-1\right) \cdot \GaussSumScalar{\chi^2}{\fieldCharacter}^{\left\lfloor\frac{\dim \hermitianSpace}{2}\right\rfloor} \cdot \tau_{G, \chi, \fieldCharacter}\left(s\right).$$
 	Since $\centralCharacter{\Pi}\left(-1\right) = \theta\left(-1\right)$ for every $\Pi$ with $c_{\Pi} \ne 0$,
 	$$c_{\pi} \cdot \dblVirtualGaussSumScalar{\trace \pi}{\fieldCharacter} = \left(R_{T,\theta}\left(1\right) - \sum_{\substack{\Pi \ne \pi\\
-	c_{\Pi} \ne 0}} c_{\Pi} \dim \Pi\right) \cdot \theta\left(-1\right) \cdot \GaussSumScalar{\chi^2}{\fieldCharacter}^{\left\lfloor\frac{\dim \hermitianSpace}{2}\right\rfloor} \cdot g\left(s, \fieldCharacter\right).$$
-	Since $$R_{T,\theta}\left(1\right) = \sum_{\Pi} c_{\Pi} \trace \Pi,$$ it follows that $$\dblVirtualGaussSumScalar{\trace \pi}{\chi} = \dim \pi \cdot \centralCharacter{\pi}\left(-1\right) \cdot \GaussSumScalar{\chi^2}{\fieldCharacter}^{\left\lfloor\frac{\dim \hermitianSpace}{2}\right\rfloor} \cdot g\left(s, \fieldCharacter\right).$$
+	c_{\Pi} \ne 0}} c_{\Pi} \dim \Pi\right) \cdot \theta\left(-1\right) \cdot \GaussSumScalar{\chi^2}{\fieldCharacter}^{\left\lfloor\frac{\dim \hermitianSpace}{2}\right\rfloor} \cdot \tau_{G, \chi, \fieldCharacter}\left(s\right).$$
+	Since $$R_{T,\theta}\left(1\right) = \sum_{\Pi} c_{\Pi} \trace \Pi,$$ it follows that $$\dblVirtualGaussSumScalar{\trace \pi}{\chi} = \dim \pi \cdot \centralCharacter{\pi}\left(-1\right) \cdot \GaussSumScalar{\chi^2}{\fieldCharacter}^{\left\lfloor\frac{\dim \hermitianSpace}{2}\right\rfloor} \cdot \tau_{G, \chi, \fieldCharacter}\left(s\right).$$
 	Since $\dblVirtualGaussSumScalar{\trace \pi}{\chi} = \dim \pi \cdot \dblGaussSumScalar{\pi}{\chi}$, the result follows.
 \end{proof}
 
