--- a/paper.tex
+++ b/paper.tex
@@ -547,9 +547,9 @@ where $t_j \in \multiplicativegroup{\finiteFieldExtension{k_j}}$ and $u_i \in \f
 \begin{equation}\label{eq:characteristic-polynomial-equality-for-semisimple-elements}
 	\characteristicPolynomial_{t}\left(X\right) = \prod_{i=1}^s \characteristicPolynomial_{u_i, \finiteFieldExtension{d'_i}}\left(X\right)^{b'_i} \cdot \prod_{j=1}^r \characteristicPolynomial_{t_j, \finiteFieldExtension{d_j}}\left(X\right)^{b_j}\characteristicPolynomial_{t_j^{-1}, \finiteFieldExtension{d_j}}\left(X\right)^{b_j}.
 \end{equation}
-The equalities \eqref{eq:hasse-davenport-for-semisimple-elements} and \eqref{eq:characteristic-polynomial-equality-for-semisimple-elements} imply that may define $g_T\left(t,\fieldCharacter\right)$ using the $\finiteField$-characteristic polynomial of $t$ (viewed as an element of $\GL\left(\hermitianSpace\right)$) by defining a fully multiplicative function $\tau_{\chi, \fieldCharacter} \colon \finiteField\left[X\right]_{\mathrm{monic}} \to \cComplex$, sending $1$ to $1$ and any monic irreducible polynomial $p\left(X\right)$ of degree $d \ge 1$ to $\GaussSumCharacter{\ToriDualToriIsomorphism_{d}^{-1}\left(\xi\right)}{\chi}{\fieldCharacter_d}$, where $\xi \in \multiplicativegroup{\finiteFieldExtension{d}}$ is any root of the polynomial $P\left(X\right)$. This map is well defined because Gauss sums are constant on Frobenius orbits of characters.
+The equalities \eqref{eq:hasse-davenport-for-semisimple-elements} and \eqref{eq:characteristic-polynomial-equality-for-semisimple-elements} imply that may define $g_T\left(t,\fieldCharacter\right)$ using the $\finiteField$-characteristic polynomial of $t$ (viewed as an element of $\GL\left(\hermitianSpace\right)$) by defining a fully multiplicative function $\tau_{\chi, \fieldCharacter} \colon \finiteField\left[X\right]_{\mathrm{monic}} \to \cComplex$, sending $1$ to $1$ and any monic irreducible polynomial $p\left(X\right)$ of degree $d \ge 1$ to $\GaussSumCharacter{\ToriDualToriIsomorphism_{d}^{-1}\left(\xi\right)}{\chi^{-1}}{\fieldCharacter_d}$, where $\xi \in \multiplicativegroup{\finiteFieldExtension{d}}$ is any root of the polynomial $P\left(X\right)$. This map is well defined because Gauss sums are constant on Frobenius orbits of characters.
 
-If $s \in \GL_n\left(\finiteField\right)$ is semisimple, we denote $$\tau_{\GL_n\left(\finiteField\right), \chi, \fieldCharacter}\left(s\right) = \tau_{\chi, \fieldCharacter}\left(\characteristicPolynomial_s\left(X\right)\right),$$
+If $s \in \GL_n\left(\finiteField\right)$ is semisimple, we denote $$\tau_{\GL_n\left(\finiteField\right), \chi, \fieldCharacter}\left(s\right) = \tau_{\chi, \fieldCharacter}\left(\characteristicPolynomial_s\left(X\right)\right).$$
 
 Since the $\finiteField$-characteristic polynomial of $t$ does not depend on the maximal torus $T$ containing $t$, we conclude that the map $t \mapsto g_T\left(t, \fieldCharacter\right)$ does not depend on $t$ and we denote for any semisimple element $s \in G$, $$\tau_{G, \chi, \fieldCharacter}\left(s, \fieldCharacter\right) = g_T\left(s, \fieldCharacter\right) = \tau_{\chi, \fieldCharacter}\left(\characteristicPolynomial_{s}\left(X\right)\right),$$
 where $T$ is any maximal torus containing $s$ and $\characteristicPolynomial_{s}$ is the $\finiteField$-characteristic polynomial of $s$, viewed as an element of $\GL\left(\hermitianSpace\right)$.
