--- a/paper.tex
+++ b/paper.tex
@@ -579,9 +579,9 @@ Combining this with Grothendieck-Lefschetz we get
 \calvin{there might be a simple non-geometric way to do this corollary not sure.}
 \calvin{The corollary plus the definition of geometric conjugacy imply $g_T(\theta,\psi) = \mu_kg_{T'}(\theta',\psi)$ for some $k$-th root of unity $\mu_k$. Not sure how to finish from here.}
 
-The \emph{Lusztig series} $\LusztigSeries{G}{s}$ consists of the irreducible representations $\pi$ of $R_{T, \theta}$ with $c_{\pi} \ne 0$ as in the theorem.
+Let $\ToriDualToriIsomorphism_T \colon \widehat{T} \to T$ be as in the previous sections. Suppose that $\theta \colon T \to \multiplicativegroup{\cComplex}$ is a character and that $\ToriDualToriIsomorphism_T\left(\theta\right) = s$. The \emph{Lusztig series} $\LusztigSeries{G}{s}$ consists of (equivalence classes of) the irreducible representations $\pi$ of $R_{T, \theta}$ with $c_{\pi} \ne 0$ as in the theorem.
 
-Let $L \subset G$ be a Levi subgroup of $G$, and suppose that $L \cong \prod_{j=1}^\ell \GL_{t_j}\left(\finiteField\right) \times G'$ where $G' = \IsometryGroup\left(\hermitianSpace'\right)$ where $\hermitianSpace'$ is a non-degenerate hermitian subspace and $\hermitianSpace = \xIsotropic \oplus \hermitianSpace' \oplus \yIsotropic$, where $\xIsotropic$ and $\yIsotropic$ are totally isotropic subspace in duality. Suppose that $s \in T$ is such that $s \in L$, and denote by $s_i$ the projection of $s$ to $\GL_{t_i}\left(\finiteField\right)$ for $1 \le i \le \ell$ and by $s_0$ the projection of $s$ to $G'$. We denote
+Let $L \subset G$ be a Levi subgroup of $G$, and suppose that $L \cong \prod_{j=1}^\ell \GL_{t_j}\left(\finiteField\right) \times G'$ where $G' = \IsometryGroup\left(\hermitianSpace'\right)$ where $\hermitianSpace'$ is a non-degenerate hermitian subspace and $\hermitianSpace = \xIsotropic \oplus \hermitianSpace' \oplus \yIsotropic$, where $\xIsotropic$ and $\yIsotropic$ are totally isotropic subspace in duality. Suppose that $s \in L$, and denote by $s_i$ the projection of $s$ to $\GL_{t_i}\left(\finiteField\right)$ for $1 \le i \le \ell$ and by $s_0$ the projection of $s$ to $G'$. We denote
 $$\LusztigSeries{L}{s} = \left(\bigotimes_{j=1}^{\ell} \LusztigSeries{\GL_{t_j}\left(\finiteField\right)}{s_j}\right) \otimes \LusztigSeries{G'}{s_0}.$$
 It is clear that $$\tau_{G, \chi, \fieldCharacter}\left(s\right) = \tau_{G', \chi, \fieldCharacter}\left(s_0\right) \cdot \prod_{j=1}^r \tau_{\GL_{t_j}\left(\finiteField\right), \chi, \fieldCharacter}\left(s_j\right) \tau_{\GL_{t_j}\left(\finiteField\right), \chi, \fieldCharacter}\left(s_j^{-1}\right).$$
 
